# insane

./: .gitignore  Cargo.toml  README.md  test.csv
doc/: README.md  build.py  modules.md
sane-cli/: Cargo.toml
sane-cli/examples/: main.sn  map.sn  module_0.sn
sane-cli/examples/module_1/: module.sn  submodule.sn
sane-cli/src/: interactive.rs  main.rs
sane-core/: Cargo.toml
sane-core/src/: binary.rs  bind.rs  build_in.rs  build_in_functions.rs  const_expr.rs  context.rs  error.rs  execute.rs  file.rs  fun.rs  ident.rs  if_then_else.rs  let_in.rs  lib.rs  list.rs  module_0.sn  module_1.sn  module_2.sn  module_3.sn  ns_ident.rs  parse.rs  sane.pest  test.sn  type_expr.rs
sane-core/tests/: map_test.rs  prelude.sn  prelude_test.rs  reduce_test.rs
src/: csv.pest  main.rs  sane.pest
stdlib/: prelude.sn
