[package]
name = "sane-cli"
version = "0.1.0"
authors = ["bozydar <bozysob@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sane-core = {path = "../sane-core"}
rustyline = "6.1.0"
assert_matches = "1.2"
rustyline-derive  = "0.3.1"
clap = { git = "https://github.com/clap-rs/clap/" }

[[bin]]
name = "sane"
path = "src/main.rs"

# [[bin]]
# name = "abc"
# path = "src/main.rs"